test/errors/python_generator_error/zs/module_names/const_with_const_clash_error.zs
package module_names.const_with_const_clash_error;

const uint32 SOME_NAME = 13;
const uint32 SomeName = 13;
